add css style (new)

--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -75,30 +77,30 @@
                         <p>Веб-сайт</p>
                     </div>
                 </div>
-            <br>
-            <div>
-                <img src="/images/img(6).png" alt="ggg">
+                <br>
                 <div>
-                    <span>Видання Limited Edition</span>
-                    <p>Дизайн</p>
+                    <img src="/images/img(6).png" alt="ggg">
+                    <div>
+                        <span>Видання Limited Edition</span>
+                        <p>Дизайн</p>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div>
-                <img src="/images/img(7).png" alt="">
+                <br>
                 <div>
-                    <span>Проєкт LAB</span>
-                    <p>Маркетинг</p>
+                    <img src="/images/img(7).png" alt="">
+                    <div>
+                        <span>Проєкт LAB</span>
+                        <p>Маркетинг</p>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div>
-                <img src="/images/img(8).png" alt="">
+                <br>
                 <div>
-                    <span>Growing Business</span>
-                    <p>Додаток</p>
+                    <img src="/images/img(8).png" alt="">
+                    <div>
+                        <span>Growing Business</span>
+                        <p>Додаток</p>
+                    </div>
                 </div>
-            </div>
             </section>
         </div>
     </main>
