--- a/index2.html
+++ b/index2.html
@@ -10,93 +10,93 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <img src="/images/WebStudio2.png" alt="">
-            <ul>
-                <li><a href="#" target="_self" class="nav-ul">Студія</a></li>
-                <li><a href="#" target="_blank" class="nav-ul">Портфоліо</a></li>
-                <li><a href="#" target="_self" class="nav-ul">Контакти</a></li>
-                <li><a href="#" target="_blank" class="nav-ul">info@devstudio.com</a></li>
-                <li><a href="#" target="_self" class="nav-ul">+380 096 111 11</a></li>
+            <ul class="header_navigation">
+                <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">Студія</a></li>
+                <li><a href="#" target="_blank" class="nav-ul" class="header_navigation--item">Портфоліо</a></li>
+                <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">Контакти</a></li>
+                <li><a href="#" target="_blank" class="nav-ul" class="header_navigation--item">info@devstudio.com</a></li>
+                <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">+380 096 111 11</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="button">
-            <button>Усі</button> <button>Веб-сайти</button> <button>Додатки</button> <button>Дизайн</button>
-            <button>Маркетинг</button>
+    <main class="main">
+        <div class="button" class="main_button">
+            <button class="main_button--buttons">Усі</button> <button class="main_button--buttons">Веб-сайти</button> <button class="main_button--buttons">Додатки</button> <button class="main_button--buttons">Дизайн</button>
+            <button class="main_button--buttons">Маркетинг</button>
             <br>
-            <section>
+            <section class="main_section--first">
                 <div class="container">
-                    <div>
+                    <div >
                         <img src="/images/img.png" alt="">
-                        <div>
+                        <div class="main_container--text">
                             <span>Технокряк</span>
                             <p>Веб-сайт</p>
                         </div>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(1).png" alt="">
-                    <div>
+                    <div class="main_container--text">
                         <span>Постер New Orlean vs Golden Star</span>
                         <p>Маркетинг</p>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(2).png" alt="">
-                    <div>
+                    <div class="main_container--text">
                         <span>Ресторан Seafood</span>
                         <p>Додаток</p>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(3).png" alt="">
-                    <div>
+                    <div class="main_container--text">
                         <span>Проєкт Prime</span>
                         <p>Дизайн</p>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(4).png" alt="">
-                    <div>
+                    <div class="main_container--text">
                         <span>Проєкт Boxes</span>
                         <p>Додаток</p>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(5).png" alt="">
-                    <div>
+                    <div class="main_container--text">
                         <span>Inspiration has no Borders</span>
                         <p>Веб-сайт</p>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(6).png" alt="ggg">
-                    <div>
+                    <div class="main_container--text">
                         <span>Видання Limited Edition</span>
                         <p>Дизайн</p>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(7).png" alt="">
-                    <div>
+                    <div class="main_container--text">
                         <span>Проєкт LAB</span>
                         <p>Маркетинг</p>
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="main_container--image">
                     <img src="/images/img(8).png" alt="">
-                    <div>
+                    <div class="main_container--text">
                         <span>Growing Business</span>
                         <p>Додаток</p>
                     </div>
@@ -106,11 +106,11 @@
     </main>
     <footer class="footer">
         <br>
-        <img src="/images/WebStudio.png" alt="" class="paragraf">
+        <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
         <ul>
-            <li class="paragraf">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26</li>
-            <li class="paragraf">info@devstudio.com</li>
-            <li class="paragraf">+38 096 111 11 11</li>
+            <li class="paragraf" class="footer_navigation--item">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26</li>
+            <li class="paragraf" class="footer_navigation--item">info@devstudio.com</li>
+            <li class="paragraf" class="footer_navigation--item">+38 096 111 11 11</li>
         </ul>
     </footer>
 </body>
