--- a/index.html
+++ b/index.html
@@ -10,67 +10,67 @@
 <body>
     <header>
         <nav>
-            <img src="/images/WebStudio2.png" alt="">
-            <ul>
-                <li><a href="#" target="_self">Студія</a></li>
-                <li><a href="#" target="_blank">Портфоліо</a></li>
-                <li><a href="#" target="_self">Контакти</a></li>
-                <li><a href="#" target="_blank">info@devstudio.com</a></li>
-                <li><a href="#" target="_self">+380 096 111 11</a></li>
+            <img src="/images/WebStudio2.png" alt="" class="header_image">
+            <ul class="header_navigation">
+                <li><a href="#" target="_self" class="header_navigation--item">Студія</a></li>
+                <li><a href="#" target="_blank" class="header_navigation--item">Портфоліо</a></li>
+                <li><a href="#" target="_self" class="header_navigation--item">Контакти</a></li>
+                <li><a href="#" target="_blank" class="header_navigation--item">info@devstudio.com</a></li>
+                <li><a href="#" target="_self" class="header_navigation--item">+380 096 111 11</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="main">
+    <main class="main">
+        <div class="main_textbutton">
         <h1 style="color: #FFFFFF;">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
         <button>Замовити послугу</button>
         </div>
-        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        <h2>ПУНКТУАЛЬНІСТЬ</h2>
-        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        <h2>ПЛАНУВАННЯ</h2>
-        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        <h2 class="main_card--title">УВАГА ДО ДЕТАЛЕЙ</h2>
+        <p class="main_card--text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <h2 class="main_card--title">ПУНКТУАЛЬНІСТЬ</h2>
+        <p class="main_card--text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        <h2 class="main_card--title">ПЛАНУВАННЯ</h2>
+        <p class="main_card--text">Так само консультація з широким активом значною мірою зумовлює.</p>
+        <h2 class="main_card--title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+        <p class="main_card--text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         <br>
-        <h2>Чим ми займаємося</h2>
-            <img src="/images/nout.png" alt="work at tablet">
-            <img src="/images/robota.png" alt="work at laptop">
-            <img src="/images/dizain.png" alt="work at graphics tablet">
+        <h2 class="main_card--title">Чим ми займаємося</h2>
+            <img src="/images/nout.png" alt="work at tablet" class="main_container--image">
+            <img src="/images/robota.png" alt="work at laptop" class="main_container--image">
+            <img src="/images/dizain.png" alt="work at graphics tablet" class="main_container--image">
             <br>
             <h2>Наша команда</h2>
-            <section>
-                <img src="/images/men.jpg" alt="men with glasses" width="250">
-                <h3>Ігор Дем'яненко</h3>
+            <section class="main_section--first">
+                <img src="/images/men.jpg" alt="men with glasses" width="250" class="main_container--image">
+                <h3 class="main_card--secondtitle">Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </section>
             <br>
-            <section>
-                <img src="/images/woo.jpg" alt="girl with glasses" width="250">
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+            <section class="main_section--first">
+                <img src="/images/woo.jpg" alt="girl with glasses" width="250" class="main_container--image">
+                <h3 class="main_card--secondtitle">Ольга Рєпіна</h3>
+                <p class="main_card--secondtext">Frontend Developer</p>
             </section>
             <br>
-            <section>
-                <img src="/images/men_without_glasses.jpg" alt="men without glasses" width="250">
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+            <section class="main_section--first">
+                <img src="/images/men_without_glasses.jpg" alt="men without glasses" width="250" class="main_container--image">
+                <h3 class="main_card--secondtitle">Микола Тарасов</h3>
+                <p class="main_card--secondtext">Marketing</p>
             </section>
             <br>
-            <section>
-                <img src="/images/men_with_glasses.jpg" alt="men with glasses" width="250">
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+            <section class="main_section--first">
+                <img src="/images/men_with_glasses.jpg" alt="men with glasses" width="250" class="main_container--image">
+                <h3 class="main_card--secondtitle">Михайло Єрмаков</h3>
+                <p class="main_card--secondtext">UI Designer</p>
             </section>
             <br>
     </main>
     <footer class="footer">
-        <img src="/images/WebStudio.png" alt="" class="paragraf">
+        <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
         <ul>
-            <li class="paragraf">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26</li>
-            <li class="paragraf">info@devstudio.com</li>
-            <li class="paragraf">+38 096 111 11 11</li>
+            <li class="paragraf" class="footer_navigftion--first">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26</li>
+            <li class="paragraf" class="footer_navigftion--first">info@devstudio.com</li>
+            <li class="paragraf" class="footer_navigftion--first">+38 096 111 11 11</li>
         </ul>
     </footer>
 </body>
