--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav>
-            <img src="/images/WebStudio2.png" alt="">
+            <img src="/images/WebStudio2.png" alt="" class="header_image">
             <ul class="header_navigation">
                 <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">Студія</a></li>
                 <li><a href="#" target="_blank" class="nav-ul" class="header_navigation--item">Портфоліо</a></li>
@@ -27,7 +27,7 @@
             <button class="main_button--buttons">Усі</button> <button class="main_button--buttons">Веб-сайти</button> <button class="main_button--buttons">Додатки</button> <button class="main_button--buttons">Дизайн</button>
             <button class="main_button--buttons">Маркетинг</button>
             <br>
-            <section class="main_section--first">
+            <section class="main_section">
                 <div class="container">
                     <div >
                         <img src="/images/img.png" alt="">
