--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,48 +24,59 @@
     </header>
     <main class="main">
         <div class="main_textbutton">
-        <h1 style="color: #FFFFFF;">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-        <button>Замовити послугу</button>
+            <h1 style="color: #FFFFFF;">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+            <button>Замовити послугу</button>
         </div>
-        <h2 class="main_card--title">УВАГА ДО ДЕТАЛЕЙ</h2>
-        <p class="main_card--text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        <h2 class="main_card--title">ПУНКТУАЛЬНІСТЬ</h2>
-        <p class="main_card--text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        <h2 class="main_card--title">ПЛАНУВАННЯ</h2>
-        <p class="main_card--text">Так само консультація з широким активом значною мірою зумовлює.</p>
-        <h2 class="main_card--title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-        <p class="main_card--text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        <div class="main_textcard">
+            <h2 class="main_card--title">УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p class="main_card--text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        </div>
+        <div class="main_textcard">
+            <h2 class="main_card--title">ПУНКТУАЛЬНІСТЬ</h2>
+            <p class="main_card--text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        </div>
+        <div class="main_textcard">
+            <h2 class="main_card--title">ПЛАНУВАННЯ</h2>
+            <p class="main_card--text">Так само консультація з широким активом значною мірою зумовлює.</p>
+        </div>
+        <div class="main_textcard">
+            <h2 class="main_card--title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p class="main_card--text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </div>
         <br>
-        <h2 class="main_card--title">Чим ми займаємося</h2>
+        <div class="main_picturecard">
+            <h2 class="main_card--title">Чим ми займаємося</h2>
             <img src="/images/nout.png" alt="work at tablet" class="main_container--image">
             <img src="/images/robota.png" alt="work at laptop" class="main_container--image">
             <img src="/images/dizain.png" alt="work at graphics tablet" class="main_container--image">
-            <br>
-            <h2>Наша команда</h2>
-            <section class="main_section--first">
-                <img src="/images/men.jpg" alt="men with glasses" width="250" class="main_container--image">
-                <h3 class="main_card--secondtitle">Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
-            </section>
-            <br>
-            <section class="main_section--first">
-                <img src="/images/woo.jpg" alt="girl with glasses" width="250" class="main_container--image">
-                <h3 class="main_card--secondtitle">Ольга Рєпіна</h3>
-                <p class="main_card--secondtext">Frontend Developer</p>
-            </section>
-            <br>
-            <section class="main_section--first">
-                <img src="/images/men_without_glasses.jpg" alt="men without glasses" width="250" class="main_container--image">
-                <h3 class="main_card--secondtitle">Микола Тарасов</h3>
-                <p class="main_card--secondtext">Marketing</p>
-            </section>
-            <br>
-            <section class="main_section--first">
-                <img src="/images/men_with_glasses.jpg" alt="men with glasses" width="250" class="main_container--image">
-                <h3 class="main_card--secondtitle">Михайло Єрмаков</h3>
-                <p class="main_card--secondtext">UI Designer</p>
-            </section>
-            <br>
+        </div>
+        <br>
+        <h2>Наша команда</h2>
+        <section class="main_section--first">
+            <img src="/images/men.jpg" alt="men with glasses" width="250" class="main_container--image">
+            <h3 class="main_card--secondtitle">Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+        </section>
+        <br>
+        <section class="main_section--first">
+            <img src="/images/woo.jpg" alt="girl with glasses" width="250" class="main_container--image">
+            <h3 class="main_card--secondtitle">Ольга Рєпіна</h3>
+            <p class="main_card--secondtext">Frontend Developer</p>
+        </section>
+        <br>
+        <section class="main_section--first">
+            <img src="/images/men_without_glasses.jpg" alt="men without glasses" width="250"
+                class="main_container--image">
+            <h3 class="main_card--secondtitle">Микола Тарасов</h3>
+            <p class="main_card--secondtext">Marketing</p>
+        </section>
+        <br>
+        <section class="main_section--first">
+            <img src="/images/men_with_glasses.jpg" alt="men with glasses" width="250" class="main_container--image">
+            <h3 class="main_card--secondtitle">Михайло Єрмаков</h3>
+            <p class="main_card--secondtext">UI Designer</p>
+        </section>
+        <br>
     </main>
     <footer class="footer">
         <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
