--- a/index2.html
+++ b/index2.html
@@ -11,100 +11,107 @@
 </head>
 <body>
     <header class="header">
-        <nav>
-            <img src="/images/WebStudio2.png" alt="" class="header_image">
-            <ul class="header_navigation">
-                <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">Студія</a></li>
-                <li><a href="#" target="_blank" class="nav-ul" class="header_navigation--item">Портфоліо</a></li>
-                <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">Контакти</a></li>
-                <li><a href="#" target="_blank" class="nav-ul" class="header_navigation--item">info@devstudio.com</a></li>
-                <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">+380 096 111 11</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav>
+                <img src="/images/WebStudio2.png" alt="" class="header_image">
+                <ul class="header_navigation">
+                    <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">Студія</a></li>
+                    <li><a href="#" target="_blank" class="nav-ul" class="header_navigation--item">Портфоліо</a></li>
+                    <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">Контакти</a></li>
+                    <li><a href="#" target="_blank" class="nav-ul"
+                            class="header_navigation--item">info@devstudio.com</a></li>
+                    <li><a href="#" target="_self" class="nav-ul" class="header_navigation--item">+380 096 111 11</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="main">
-        <div class="button" class="main_button">
-            <button class="main_button--buttons">Усі</button> <button class="main_button--buttons">Веб-сайти</button> <button class="main_button--buttons">Додатки</button> <button class="main_button--buttons">Дизайн</button>
-            <button class="main_button--buttons">Маркетинг</button>
-            <br>
-            <section class="main_section">
-                <div class="container">
-                    <div >
+        <div class="container">
+            <div class="button" class="main_button">
+                <button class="main_button--buttons">Усі</button> <button
+                    class="main_button--buttons">Веб-сайти</button> <button
+                    class="main_button--buttons">Додатки</button> <button class="main_button--buttons">Дизайн</button>
+                <button class="main_button--buttons">Маркетинг</button>
+                <br>
+                <section class="main_section">
+                    <div>
                         <img src="/images/img.png" alt="">
                         <div class="main_container--text">
                             <span>Технокряк</span>
                             <p>Веб-сайт</p>
                         </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(1).png" alt="">
-                    <div class="main_container--text">
-                        <span>Постер New Orlean vs Golden Star</span>
-                        <p>Маркетинг</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(1).png" alt="">
+                        <div class="main_container--text">
+                            <span>Постер New Orlean vs Golden Star</span>
+                            <p>Маркетинг</p>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(2).png" alt="">
-                    <div class="main_container--text">
-                        <span>Ресторан Seafood</span>
-                        <p>Додаток</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(2).png" alt="">
+                        <div class="main_container--text">
+                            <span>Ресторан Seafood</span>
+                            <p>Додаток</p>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(3).png" alt="">
-                    <div class="main_container--text">
-                        <span>Проєкт Prime</span>
-                        <p>Дизайн</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(3).png" alt="">
+                        <div class="main_container--text">
+                            <span>Проєкт Prime</span>
+                            <p>Дизайн</p>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(4).png" alt="">
-                    <div class="main_container--text">
-                        <span>Проєкт Boxes</span>
-                        <p>Додаток</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(4).png" alt="">
+                        <div class="main_container--text">
+                            <span>Проєкт Boxes</span>
+                            <p>Додаток</p>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(5).png" alt="">
-                    <div class="main_container--text">
-                        <span>Inspiration has no Borders</span>
-                        <p>Веб-сайт</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(5).png" alt="">
+                        <div class="main_container--text">
+                            <span>Inspiration has no Borders</span>
+                            <p>Веб-сайт</p>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(6).png" alt="ggg">
-                    <div class="main_container--text">
-                        <span>Видання Limited Edition</span>
-                        <p>Дизайн</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(6).png" alt="ggg">
+                        <div class="main_container--text">
+                            <span>Видання Limited Edition</span>
+                            <p>Дизайн</p>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(7).png" alt="">
-                    <div class="main_container--text">
-                        <span>Проєкт LAB</span>
-                        <p>Маркетинг</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(7).png" alt="">
+                        <div class="main_container--text">
+                            <span>Проєкт LAB</span>
+                            <p>Маркетинг</p>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div class="main_container--image">
-                    <img src="/images/img(8).png" alt="">
-                    <div class="main_container--text">
-                        <span>Growing Business</span>
-                        <p>Додаток</p>
+                    <br>
+                    <div class="main_container--image">
+                        <img src="/images/img(8).png" alt="">
+                        <div class="main_container--text">
+                            <span>Growing Business</span>
+                            <p>Додаток</p>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
     </main>
     <footer class="footer">
+        <div class="container"></div>
         <br>
         <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
         <ul>
@@ -112,6 +119,7 @@
             <li class="paragraf" class="footer_navigation--item">info@devstudio.com</li>
             <li class="paragraf" class="footer_navigation--item">+38 096 111 11 11</li>
         </ul>
+        </div>
     </footer>
 </body>
 </html>
